FILE(GLOB HEADER_NET  ./NetCore.h ./NetMessage.h ./redisparser.h)
FILE(GLOB SOURCE_NET  *.h *.cpp)
IF(UNIX)
  FILE(GLOB SOURCE_UV  ./libuv/src/*.h ./libuv/src/*.cpp ./libuv/src/*.c ./libuv/src/*.cc)
  FILE(GLOB SOURCE_UV_PLATFROM  ./libuv/src/unix/*.h ./libuv/src/unix/*.cpp ./libuv/src/unix/*.c ./libuv/src/unix/*.cc)
  INCLUDE_DIRECTORIES(./libuv/include)
  INCLUDE_DIRECTORIES(./libuv/src/unix)
ELSE(UNIX)
  FILE(GLOB SOURCE_UV  ./libuv/src/*.h ./libuv/src/*.cpp ./libuv/src/*.c ./libuv/src/*.cc)
  FILE(GLOB SOURCE_UV_PLATFROM  ./libuv/src/win/*.h ./libuv/src/win/*.cpp ./libuv/src/win/*.c ./libuv/src/win/*.cc)
  INCLUDE_DIRECTORIES(./libuv/include)
  INCLUDE_DIRECTORIES(./libuv/src/win)  
ENDIF(UNIX)
SOURCE_GROUP("uv" FILES ${SOURCE_UV} ${SOURCE_UV_PLATFROM}) 
SOURCE_GROUP("net" FILES ${SOURCE_NET})
SOURCE_GROUP("include" FILES ${HEADER_NET})
ADD_LIBRARY(uvnet STATIC ${HEADER_NET} ${SOURCE_NET}  ${SOURCE_UV}  ${SOURCE_UV_PLATFROM} ) 
