#AUX_SOURCE_DIRECTORY(. SOURCE_NET)
FILE(GLOB HEADER_NET  ./NetCore.h ./NetMessage.h ./redisparser.h)
FILE(GLOB SOURCE_NET  *.h *.cpp *.c *.cc)
IF(COMPILER_GCC)
 MESSAGE(STATUS "GCC uv file by make system")
ELSE(COMPILER_GCC)
#MSVC自己编译libuv
  FILE(GLOB SOURCE_UV  ./libuv/src/*.h ./libuv/src/*.cpp ./libuv/src/*.c ./libuv/src/*.cc)
  FILE(GLOB SOURCE_UV_WIN  ./libuv/src/win/*.h ./libuv/src/win/*.cpp ./libuv/src/win/*.c ./libuv/src/win/*.cc)
  INCLUDE_DIRECTORIES(./libuv/include)
  INCLUDE_DIRECTORIES(./libuv/src/win)
  
  SOURCE_GROUP("uv" FILES ${SOURCE_UV} ${SOURCE_UV_WIN}) 
  SOURCE_GROUP("net" FILES ${SOURCE_NET})
  SOURCE_GROUP("include" FILES ${HEADER_NET})
ENDIF(COMPILER_GCC)
ADD_LIBRARY(net STATIC ${HEADER_NET} ${SOURCE_NET}  ${SOURCE_UV}  ${SOURCE_UV_WIN} ) 
